# crescendo-interp

./: .gitignore  .gitmodules  pyproject.toml
docs/: ideas.md  proposal.md
experiments/debug/refusal_direction_gemma2/: REPORT.md
experiments/debug/refusal_direction_position/: REPORT.md  diagnose_score_bias.py  verify_composite_score.py  verify_median_kl.py
experiments/debug/refusal_direction_position/results/: score_bias_analysis.json
notebooks/: refusal_vs_axis.ipynb  visualize_gemma2_axis.ipynb
pipelines/assistant_axis/: generate_hf.py
pipelines/data/: load_dataset.py
pipelines/refusal_direction/: config.py  run_pipeline.py
pipelines/refusal_direction/model_adapters/: base.py  factory.py  gemma.py  llama2.py  llama3.py  qwen.py  qwen3.py  yi.py
pipelines/refusal_direction/submodules/: evaluate_jailbreak.py  evaluate_loss.py  generate_directions.py  select_direction.py
pipelines/refusal_direction/utils/: hook_utils.py  utils.py
slurm/: compute_vectors_gemma2.sh  compute_vectors_qwen.sh  compute_vectors_qwen3.sh  run_crescendo_gemma2.sh  run_crescendo_qwen.sh  run_crescendo_qwen3.sh
src/crescendo/: __init__.py  __main__.py  attack.py  attacker.py  prompts.py  tracker.py  victim.py
vectors/gemma-2-27b-it/: metadata.json
